<resources>
    <string name="app_name">Gameland Georgia</string>
    <string name="bottom_navigation_home">Gameland</string>
    <string name="bottom_navigation_review">განხილვები</string>
    <string name="bottom_navigation_video">ვიდეოები</string>
    <string name="bottom_navigation_game">მაღაზია</string>
    <string name="bottom_navigation_profile">ანგარიში</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>